--- a/docs/src/themes/mitmproxydocs/layouts/partials/header.html
+++ b/docs/src/themes/mitmproxydocs/layouts/partials/header.html
@@ -13,7 +13,10 @@
     {{ with .Site.Params.author }}
     <meta name="author" content="{{ . }}">
     {{ end }}
-    <link rel="stylesheet" href="/css/style.css">
+
+    {{ $style := resources.Get "style.scss" | toCSS | minify }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
+
     {{ if .RSSLink -}}
     <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}">
     {{- end }}
