--- a/mitmproxy/addons/tutorialapp/templates/index.html
+++ b/mitmproxy/addons/tutorialapp/templates/index.html
@@ -40,7 +40,33 @@
             This tutorial is served by your local mitmproxy instance.
         </div>
 
-        <h2 class="pt-3 pb-3 mb-3 border-bottom">Step 1</h2>
+        <h2 class="pt-3 pb-3 mb-3 border-bottom">View Flows (Statically annotated images)</h2>
+
+        <div class="image-wrapper">
+            <img src="/static/images/mitmproxy_flow_list_annotated.png" alt="..." class="img-fluid">
+        </div>
+
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
+            tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
+            semper.</p>
+
+        <h2 class="pt-3 pb-3 mb-3 border-bottom">View Flows (Dynamically annotated images via HTML)</h2>
+
+        <div class="image-wrapper">
+            <img src="/static/images/mitmproxy_flow_list.png" alt="..." class="img-fluid">
+
+            <div class="image-annotation" style="top: 8%; left: 40%;" data-toggle="tooltip" data-placement="top" title="A list of flows, one per line. Columns: Time, Protocol, HTTP Method, URL">
+                <div class="introjs-hint-dot"></div><div class="introjs-hint-pulse"></div>
+            </div>
+
+            <div class="image-annotation" style="top: 33%; left: 0.2%;" data-toggle="tooltip" data-placement="top" title="The currently selected flow is highlighted with `>>`. Use the arrow keys to navigate up and down.">
+                <div class="introjs-hint-dot"></div><div class="introjs-hint-pulse"></div>
+            </div>
+
+            <div class="image-annotation" style="top: 60%; left: 80%;" data-toggle="tooltip" data-placement="top" title="Press `?` to get an overview of all keyboard shortcuts.">
+                <div class="introjs-hint-dot"></div><div class="introjs-hint-pulse"></div>
+            </div>
+        </div>
 
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
             tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
@@ -51,7 +77,22 @@
             egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan
             porttitor, facilisis luctus, metus</p>
 
-        <h2 class="pt-3 pb-3 mb-3 border-bottom">Step 2</h2>
+        <div class="image-wrapper">
+            <img src="/static/images/mitmproxy_flow_detail.png" alt="..." class="img-fluid">
+
+            <div class="image-annotation" style="top: 2%; left: 6%;" data-toggle="tooltip" data-placement="top" title="By pressing ENTER on the flow list view, the flow details are shown.">
+                <div class="introjs-hint-dot"></div><div class="introjs-hint-pulse"></div>
+            </div>
+
+            <div class="image-annotation" style="top: 22%; left: 12%;" data-toggle="tooltip" data-placement="top" title="Use your left and right arrow keys to switch between request headers, response headers, and other details.">
+                <div class="introjs-hint-dot"></div><div class="introjs-hint-pulse"></div>
+            </div>
+        </div>
+
+        <h2 class="pt-3 pb-3 mb-3 border-bottom">View Flows (Asciinema)</h2>
+
+        <script id="asciicast-IhBehz97gu4zovOdpf1kwx6Bm" src="https://asciinema.org/a/IhBehz97gu4zovOdpf1kwx6Bm.js" async></script>
+
         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
             tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
             semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien
