--- a/mitmproxy/addons/tutorialapp/templates/layout.html
+++ b/mitmproxy/addons/tutorialapp/templates/layout.html
@@ -28,6 +28,8 @@
         {% endblock %}
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="/static/bootstrap.bundle.min.js"></script>
     <script src="/static/tutorial.js"></script>
 
   </body>
