--- a/mitmproxy/addons/tutorialapp/templates/layout.html
+++ b/mitmproxy/addons/tutorialapp/templates/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>mitmproxy Tutorial (localhost)</title>
+    <title>mitmproxy/mitmweb Tutorial (localhost)</title>
 
     <link href="/static/bootstrap.min.css" rel="stylesheet">
     <link href="/static/tutorial.css" rel="stylesheet">
@@ -14,11 +14,20 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-md-2 mr-0" href="http://tutorial.mitm.it/"><img height="20px" src="static/images/mitmproxy-long.png"> Tutorial</a>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md  flex-md-nowrap p-0 shadow">
+      <a class="navbar-brand col-md-2 mr-0" href="http://tutorial.mitm.it/"><img height="20px" src="static/images/mitmproxy-long.png"> </a>
+      
+      <ul class="navbar-nav px-3 mr-sm-auto">
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="/mitmproxy">mitmproxy Tutorial</a>
+        </li>
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="/mitmweb">mitmweb Tutorial</a>
+        </li>
+      </ul>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="https://docs.mitmproxy.org/stable/" target="_blank">mitmproxy docs</a>
+          <a class="nav-link" href="https://docs.mitmproxy.org/stable/" target="_blank">Open documentation</a>
         </li>
       </ul>
     </nav>
