--- a/mitmproxy/addons/tutorialapp/templates/layout.html
+++ b/mitmproxy/addons/tutorialapp/templates/layout.html
@@ -15,14 +15,14 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-md  flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-md-2 mr-0" href="http://tutorial.mitm.it/"><img height="20px" src="static/images/mitmproxy-long.png"> </a>
+      <a class="navbar-brand col-md-2 mr-0" href="http://tutorial.mitm.it/"><img height="20px" src="/static/images/mitmproxy-long.png"> </a>
       
       <ul class="navbar-nav px-3 mr-sm-auto">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="/mitmproxy">mitmproxy Tutorial</a>
+          <a class="nav-link" href="/mitmproxy/overview">mitmproxy Tutorial</a>
         </li>
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="/mitmweb">mitmweb Tutorial</a>
+          <a class="nav-link" href="/mitmweb/overview">mitmweb Tutorial</a>
         </li>
       </ul>
       <ul class="navbar-nav px-3">
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="container-fluid">
-        {% block content %}
+        {% block frame %}
         {% endblock %}
     </div>
 
