--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/user_interface.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/user_interface.html
@@ -89,7 +89,7 @@
     <li>
         Try to figure out what the <code>/votes</code> endpoint of the voting application returns.
         <a class="btn btn-xs btn-outline-secondary" data-toggle="collapse" href="#collapse-hint-votes-endpoint" role="button" aria-expanded="false" aria-controls="collapse-hint-votes-endpoint">
-            Show hint
+            Show solution
         </a>
     </li>
     <li>Press <kbd>q</kbd> to go back to the <em>default view</em>. This shortcut works globally and exits the current view.</li>
