TimeStamp column + sorting

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -114,16 +114,19 @@
         }
     }
     .col-method {
-        width: 60px;
+        width: auto;
     }
     .col-status {
-        width: 50px;
+        width: auto;
     }
     .col-size {
-        width: 70px;
+        width: auto;
     }
     .col-time {
-        width: 50px;
+        width: auto;
+    }
+    .col-start {
+        width: auto;
     }
     td.col-time, td.col-size {
         text-align: right;
