Changed column name

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -125,7 +125,7 @@
     .col-time {
         width: auto;
     }
-    .col-start {
+    .col-timestamp {
         width: auto;
     }
     td.col-time, td.col-size {
