--- a/mitmproxy/addons/tutorialapp/templates/layout.html
+++ b/mitmproxy/addons/tutorialapp/templates/layout.html
@@ -8,6 +8,7 @@
     <title>mitmproxy/mitmweb Tutorial (localhost)</title>
 
     <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/asciinema-player.css" rel="stylesheet">
     <link href="/static/tutorial.css" rel="stylesheet">
     
     <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon"/>
@@ -39,6 +40,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="/static/bootstrap.bundle.min.js"></script>
+    <script src="/static/asciinema-player.js"></script>
     <script src="/static/tutorial.js"></script>
 
   </body>
