--- a/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/intercept_requests.html
+++ b/mitmproxy/addons/tutorialapp/templates/mitmproxy/steps/intercept_requests.html
@@ -16,10 +16,6 @@
     The command is bound to shortcut <kbd>i</kbd> by default.
 </p>
 
-<ol>
-    <li>Press <kbd>i</kbd> to prepopulate mitmproxy's command prompt with <code>set intercept ''</code>.</li>
-</ol>
-
 <p>
     Intercepting <em>all</em> requests is usually not desired as it constantly interrupts your browsing.
     Thus, mitmproxy expects a <a href="https://docs.mitmproxy.org/stable/concepts-filters/">flow filter expression</a> as the first argument to <code>set intercept</code> to selectively intercept requests.
@@ -28,15 +24,26 @@
 </p>
 
 <ol>
+    <li>Press <kbd>i</kbd> to prepopulate mitmproxy's command prompt with <code>set intercept ''</code>.</li>
     <li>Enter <kbd>~u /vote/</kbd> between the quotes of the <code>set intercept</code> command and press <kbd>ENTER</kbd>.</li>
-    <li>Make sure you are in the default view of mitmproxy that shows all previous flows.</li>
+    <!-- <li>Make sure you are in the default view of mitmproxy that shows all previous flows.</li> -->
     <li>Submit a vote in the voting app on the right.</li>
 </ol>
 
-<figure class="figure">
-    <img src="/static/images/mitmproxy_intercept_requests.gif" alt="..." class="figure-img img-fluid rounded">
-    <figcaption class="figure-caption text-center">Configure interceptions using the <code>set intercept</code> command. <span class="text-danger">[NEEDS REVISION!]</span></figcaption>
-</figure>
+<div class="asciinema-wrapper">
+    <asciinema-player id="player" src="/static/ascii.cast" cols="112" rows="18" font-size="13px" poster="npt:0:14" preload>
+        <strong>hi there</strong>
+    </asciinema-player>
+    <div class="annotation" data-from="1" data-to="5" style="left: 5%; top: 50%;">
+        1. Start mitmproxy using the `mitmproxy` command
+    </div>
+    <div class="annotation" data-from="6" data-to="9" style="left: 20%; top: 70%;">
+        2. generate some flows
+    </div>
+    <div class="annotation" data-from="10" data-to="13" style="left: 30%; top: 70%;">
+        3. change currently focussed flow
+    </div>
+</div>
 
 <p>
     You will see a new line in in the list of flows.
